@@ -1,2 +1,2 @@
-hashcat.exe -t 32 -a 7 example0.hash ?a?a?a?a example.dict
+hashcat.exe -m 0 -t 32 -a 7 example0.hash ?a?a?a?a example.dict
 pause
