@@ -1,1 +1,1 @@
-./hashcat -t 32 -a 7 example0.hash ?a?a?a?a example.dict
+./hashcat -m 0 -t 32 -a 7 example0.hash ?a?a?a?a example.dict
